--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,13 @@
         <item name="android:layout_gravity">center|left</item>
         <item name="android:drawablePadding">15dp</item>
     </style>
+    <style name="menu_text_item">
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:textColor">#454545</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
 </resources>
