--- a/app/src/main/res/layout/float_page_home.xml
+++ b/app/src/main/res/layout/float_page_home.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#55000000"
     android:padding="4dp">
 
     <RelativeLayout
+        android:id="@+id/title_bar"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="24dp">
         <ImageView
@@ -36,9 +37,17 @@
             android:layout_height="24dp" />
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="6dp"
-        android:id="@+id/rcv"
+    <RelativeLayout
+        android:id="@+id/rl_container"
+        android:layout_below="@id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</LinearLayout>
+
+    <ImageView
+        android:src="@drawable/ic_drag"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/iv_drag"
+        android:layout_width="30dp"
+        android:layout_height="30dp"/>
+</RelativeLayout>
