--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="black_FF333333">#FF333333</color>
     <color name="color_33">#333333</color>
     <color name="div_common_edge">#ffc3cdd4</color>
+    <color name="white">#ffffff</color>
+    <color name="black_21">#212121</color>
+
 </resources>
