--- a/app/src/main/res/menu/title_main.xml
+++ b/app/src/main/res/menu/title_main.xml
@@ -21,7 +21,7 @@
         app:showAsAction="always"
         />
 
-    <item
+    <!--<item
         android:id="@+id/it_sort"
         android:title="@string/sort"
         app:showAsAction="never"
@@ -35,5 +35,5 @@
         android:id="@+id/it_clear"
         android:title="@string/clear"
         app:showAsAction="never"
-        />
+        />-->
 </menu>
