--- a/app/src/main/res/layout/include_main_menu.xml
+++ b/app/src/main/res/layout/include_main_menu.xml
@@ -102,7 +102,7 @@
         android:layout_alignParentLeft="true"
         android:id="@+id/tv_about"
         android:textColor="@color/dark_gray_text"
-        android:textSize="10dp"
+        android:textSize="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
